Z-index fixed in card-img

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -18,7 +18,6 @@
     background-size: cover;
     // filter: blur(8px);
     // -webkit-filter: blur(8px);
-    z-index: 1;
 }
 
 .card-img img {
